--- a/desafio-startaideia/src/main/resources/application.properties
+++ b/desafio-startaideia/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=3000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/desafio-startaideia
-spring.datasource.username=*****
-spring.datasource.password=*****
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto=update		
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
